# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Wed Jul 31 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Optimised MonetStatement memory resource usage by only creating an ArrayList
  and ReentrantLock object when the batch methods addBatch() or executeBatch()
  are called. In most Statement usages those methods are not called.
- Implemented method MonetClob.getAsciiStream()

* Thu Mar 21 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Added implementation of java.sql.CallableStatement interface. Some standard
  Java applications require this JDBC interface for executing SQL stored procedures.
  This implementation resolves request: https://www.monetdb.org/bugzilla/show_bug.cgi?id=6402

* Thu Mar  7 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved MonetDatabaseMetaData methods:
  - getNumericFunctions(): it now includes functions: degrees, fuse, ms_round, ms_str, ms_trunc and radians.
  - getStringFunctions(): it now includes function: position.
  - supportsIntegrityEnhancementFacility() now returns false, as we do not enforce CHECK constraints yet.

* Thu Feb  7 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved MonetDatabaseMetaData methods:
  - getNumericFunctions(): it no longer lists aggregate functions: avg, prod and sum
  - getSystemFunctions(): it no longer lists timedate function: extract
  - getTimeDateFunctions(): it now also lists functions: date_trunc, epoch
- Corrected MonetDatabaseMetaData method getTypeInfo() for result column
  SEARCHABLE. It now returns DatabaseMetaData.typeSearchable for all
  string data types including 'inet','json','url','uuid' and 'blob'.

* Thu Sep 20 2018 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved example program SQLcopyinto.java and moved it to tests directory
  for automatic testing.

* Thu Jun 28 2018 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>