@@ -2,10 +2,14 @@
 # This file is updated with Maddlog
 
 * Wed Jul 31 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Corrected MonetDatabaseMetaData methods:
+  - getNumericFunctions(): it now includes function: pi.
+  - getSystemFunctions(): it no longer lists numeric functions: pi and rand.
+  - supportsSchemasInIndexDefinitions(): changed from true to false
 - Optimised MonetStatement memory resource usage by only creating an ArrayList
   and ReentrantLock object when the batch methods addBatch() or executeBatch()
-  are called. In most Statement usages those methods are not called.
-- Implemented method MonetClob.getAsciiStream()
+  are called. In most Statement usages those methods are never called.
+- Implemented method MonetClob.getAsciiStream().
 
 * Thu Mar 21 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Added implementation of java.sql.CallableStatement interface. Some standard
